# QRGenerator

./: CMakeLists.txt  Doxyfile  Makefile  README.md  main  my_output.txt  version.txt
include/: bitstream.h  galois_field.h  gui.h  input_handler.h  logger.h  poly_math.h  qr_capacity.h  qr_format.h  qr_generator.h  rs_encoding.h
src/: galois_field.c  gui.c  input_handler.c  logger.c  logger.h  main.c  poly_math.c  qr_generator.c  rs_encoding.c
